# MEDS_transforms

./: .codecov.yml  .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  conftest.py  joint_script.sh  mkdocs.yml  pipeline_configuration.md  preprocessing_operation_prototypes.md  pyproject.toml  run.py  sbatch_joint_script.sh  terminology.md  tokenization_tensorization.md
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  python-build.yaml  tests.yaml
AUMC_Example/: README.md  joint_script.sh  pre_MEDS.py  run.sh
AUMC_Example/configs/: event_configs.yaml  extract_AUMC.yaml  pre_MEDS.yaml  table_preprocessors.yaml
AUMCdb_Example/: local_parallelism_runner.yaml  run.sh  slurm_runner.yaml
AUMCdb_Example/configs/: extract_AUMC.yaml  pre_MEDS.yaml  table_preprocessors.yaml
GEMINI_Example/: joint_script_slurm.sh
GEMINI_Example/configs/: event_configs.yaml
MIMIC-IV_Example/: README.md  event_configs.yaml  joint_script.sh  joint_script_slurm.sh  pre_MEDS.py  run.sh  sbatch_joint_script.sh  slurm_runner.yaml
MIMIC-IV_Example/configs/: event_configs.yaml  extract_MIMIC.yaml  pre_MEDS.yaml
configs/: extraction.yaml  pipeline.yaml  preprocess.yaml  pytorch_dataset.yaml  small_hf_extraction.yaml
docs/: gen_ref_pages.py  gen_stage_docs.py  index.md  pipeline_configuration.md  preprocessing_operation_prototypes.md  static  terminology.md  tokenization_tensorization.md
eICU_Example/: README.md  joint_script.sh  joint_script_slurm.sh  pre_MEDS.py  run.sh  sbatch_joint_script.sh
eICU_Example/configs/: event_configs.yaml  extract_eICU.yaml  table_preprocessors.yaml
example/: README.md
example/data/: source.yaml
example/data/metadata/: codes.parquet  subject_splits.parquet
example/output_data/metadata/: codes.parquet
example/simple_example_pkg/: README.md  pyproject.toml
example/simple_example_pkg/src/simple_example_pkg/add_sequence_number/: add_sequence_number.py
example/simple_example_pkg/src/simple_example_pkg/add_sequence_number/examples/: README.md  out_data.yaml
example/simple_example_pkg/src/simple_example_pkg/csv_to_meds/: config.yaml  csv_to_meds.py
example/simple_example_pkg/src/simple_example_pkg/csv_to_meds/examples/simple/: _test_cfg.yaml  in.yaml  out_data.yaml
example/simple_example_pkg/src/simple_example_pkg/drop_regex/: config.yaml  drop_regex.py
example/simple_example_pkg/src/simple_example_pkg/drop_regex/examples/: cfg.yaml  out_data.yaml
example/simple_example_pkg/src/simple_example_pkg/export_code_summary/: export_code_summary.py
example/simple_example_pkg/src/simple_example_pkg/export_code_summary/examples/: README.md  out_data.yaml
example/simple_example_pkg/src/simple_example_pkg/pipelines/: example_pipeline.yaml
example/simple_example_pkg/src/simple_example_pkg/stages/identity_stage/: identity_stage.py
example/simple_example_pkg/tests/: test_registered_stages.py
examples/: README.md
scripts/extraction/: collect_code_metadata.py  convert_to_sharded_events.py  merge_to_MEDS_cohort.py  shard_events.py  split_and_shard_patients.py
scripts/preprocessing/: add_time_derived_measurements.py  collect_code_metadata.py  filter_codes.py  filter_outliers.py  filter_patients.py  fit_vocabulary_indices.py  normalize.py  tensorize.py  tokenization.py
src/MEDS_polars_functions/: __init__.py  aggregate_by_code.py  aggregate_code_metadata.py  code_metadata.py  event_conversion.py  filter_measurements.py  filter_patients_by_length.py  fit_vocabulary_indices.py  get_vocabulary.py  mapper.py  normalization.py  pytorch_batch.py  pytorch_dataset.py  sharding.py  tensorize.py  time_derived_measurements.py  tokenize.py  utils.py
src/MEDS_polars_functions/configs/: extract.yaml  extraction.yaml  pipeline.yaml  preprocess.yaml
src/MEDS_polars_functions/extract/: README.md  __init__.py  convert_to_sharded_events.py  extract_code_metadata.py  merge_to_MEDS_cohort.py  parser.py  shard_events.py  split_and_shard_patients.py  utils.py
src/MEDS_polars_functions/extraction/: aggregate_code_metadata.py  collect_code_metadata.py  convert_to_sharded_events.py  event_conversion.py  merge_to_MEDS_cohort.py  shard_events.py  sharding.py  split_and_shard_patients.py
src/MEDS_polars_functions/filters/: filter_measurements.py  (+2 more)
src/MEDS_pytorch_dataset/: pytorch_batch.py  pytorch_dataset.py
src/MEDS_transforms/: __init__.py  __main__.py  add_metadata_translation.py  aggregate_code_metadata.py  docgen.py  fit_vocabulary_indices.py  get_stage_id.py  parser.py  profiler_callback.py  pytest_plugin.py  reshard_to_split.py  runner.py  stage.py  stages.py  utils.py  vocabulary_mapping.py
test/: test_extraction.py
tests/: __init__.py  conftest.py  test_add_time_derived_measurements.py  test_aggregate_code_metadata.py  test_example_pkg.py  test_extract.py  test_extract_no_metadata.py  test_extract_values.py  test_extraction.py  test_filter_measurements.py  test_filter_patients.py  test_filter_subjects.py  test_fit_vocabulary_indices.py  test_generic_input.py  test_main.py  test_multi_stage_preprocess_pipeline.py  test_normalization.py  test_occlude_outliers.py  test_pipeline.py  test_preprocessing.py  test_registered_stages.py  test_reorder_measurements.py  test_reshard_to_split.py  test_tensorization.py  test_tokenization.py  test_with_runner.py  transform_tester_base.py  utils.py
tests/MEDS_Extract/: __init__.py  test_convert_to_sharded_events.py  test_extract.py  test_extract_code_metadata.py  test_extract_no_metadata.py  test_finalize_MEDS_data.py  test_finalize_MEDS_metadata.py  test_merge_to_MEDS_cohort.py  test_shard_events.py  test_split_and_shard_subjects.py
tests/MEDS_Transforms/: __init__.py  test_add_time_derived_measurements.py  test_aggregate_code_metadata.py  test_extract_values.py  test_filter_measurements.py  test_filter_subjects.py  test_fit_vocabulary_indices.py  test_multi_stage_preprocess_pipeline.py  test_normalization.py  test_occlude_outliers.py  test_reorder_measurements.py  test_reshard_to_split.py  test_tensorization.py  test_tokenization.py  transform_tester_base.py
(+271 files in other folders)
