[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MEDS_transforms"
dynamic = ["version"]
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "A framework for compiling simple, mapreduce style pipelines over MEDS datasets."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "polars~=1.26", "pyarrow", "hydra-core", "numpy", "meds==0.3.3", "filelock",
]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pre-commit<4"]
tests = ["pytest", "pytest-cov", "rootutils", "hydra-joblib-launcher", "meds_testing_helpers~=0.2.4"]
local_parallelism = ["hydra-joblib-launcher"]
slurm_parallelism = ["hydra-submitit-launcher"]
docs = [
  "mkdocs==1.6.1", "mkdocs-material==9.6.7", "mkdocstrings[python,shell]==0.28.2", "mkdocs-gen-files==0.5.0",
  "mkdocs-literate-nav==0.6.1", "mkdocs-section-index==0.3.9", "mkdocs-git-authors-plugin==0.9.2",
  "mkdocs-git-revision-date-localized-plugin==1.3.0"
]

[project.scripts]
# Stages
MEDS_transform-stage = "MEDS_transforms.__main__:run_stage"

# Runner
MEDS_transform-pipeline = "MEDS_transforms.runner:main"

[project.entry-points."MEDS_transforms.stages"]
aggregate_code_metadata = "MEDS_transforms.stages.aggregate_code_metadata:main"
fit_vocabulary_indices = "MEDS_transforms.stages.fit_vocabulary_indices:main"
reshard_to_split = "MEDS_transforms.stages.reshard_to_split:main"
filter_measurements = "MEDS_transforms.stages.filter_measurements:filter_measurements.main"
filter_subjects = "MEDS_transforms.stages.filter_subjects:filter_subjects.main"
reorder_measurements = "MEDS_transforms.stages.reorder_measurements:reorder_measurements.main"
add_time_derived_measurements = "MEDS_transforms.stages.add_time_derived_measurements:add_time_derived_measurements.main"
extract_values = "MEDS_transforms.stages.extract_values:extract_values.main"
normalization = "MEDS_transforms.stages.normalization:normalize.main"
occlude_outliers = "MEDS_transforms.stages.occlude_outliers:occlude_outliers.main"

[project.urls]
Homepage = "https://github.com/mmcdermott/MEDS_transforms"
Issues = "https://github.com/mmcdermott/MEDS_transforms/issues"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--doctest-modules",
  "--ignore=docs",
  "--doctest-glob=*.md",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
