[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-example-pkg"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["MEDS-transforms"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["simple_example_pkg*"]

[tool.setuptools.package-data]
"simple_example_pkg" = ["**/*.yaml"]

[project.entry-points."MEDS_transforms.stages"]
drop_regex = "simple_example_pkg.drop_regex.drop_regex:drop_regex"
csv_to_meds = "simple_example_pkg.csv_to_meds.csv_to_meds:main"
export_code_summary = "simple_example_pkg.export_code_summary.export_code_summary:main"

[tool.pytest.ini_options] # Section (not contents) necessary for pytest to know which package we're testing.
addopts = [
  "--color=yes",
  "--doctest-modules",
  "--doctest-glob=*.md",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
